--- a/src/CurzonSchedule/CurzonSchedule.csproj
+++ b/src/CurzonSchedule/CurzonSchedule.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConsoleTables" Version="2.2.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.7.2" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.0" />
   </ItemGroup>
