--- a/src/CurzonSchedule/CurzonSchedule.csproj
+++ b/src/CurzonSchedule/CurzonSchedule.csproj
@@ -7,8 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="ConsoleTables" Version="2.2.0" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.7.2" />
-    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.0" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.8.0" />
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.2.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
